tests/baselines/reference/minimal_nodeModules.errors.txt
/main.ts(1,16): error TS2307: Cannot find module 'foo' or its corresponding type declarations.
/main.ts(2,16): error TS2846: Relative imports into 'node_modules' are not allowed.
/main.ts(3,21): error TS2846: Relative imports into 'node_modules' are not allowed.


==== /node_modules/foo/index.d.ts (0 errors) ====
    import {} from "./other.js";
    export {};
    
==== /node_modules/foo/other.d.ts (0 errors) ====
    export {};
    
==== /node_modules/@types/foo/index.d.ts (0 errors) ====
    export {};
    
==== /main.ts (3 errors) ====
    import {} from "foo";
                   ~~~~~
!!! error TS2307: Cannot find module 'foo' or its corresponding type declarations.
    import {} from "./node_modules/foo/index.js";
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2846: Relative imports into 'node_modules' are not allowed.
    import type {} from "./node_modules/@types/foo/index.d.ts";
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2846: Relative imports into 'node_modules' are not allowed.
    